# minionmadness

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  minion-maddness.code-workspace
MinionMadnessSource/: .gitignore  MinionMadnessSource.sln
MinionMadnessSource/Graphics/: Graphics.vcxproj  Graphics.vcxproj.filters  Graphics_impl.cpp  Graphics_impl.h  MinionGraphicsDemo.cpp
MinionMadnessSource/Utilities/: Utilities.vcxproj  Utilities.vcxproj.filters  logger.h
assets/: .gitignore
documents/: GFX.uxf  Logic.uxf  MinionMadness.uxf  apitrace.txt
output/Utilities/: Utilitiesx86Debug.lib
source/GameLogic/: GameLogic.vcxproj  GameLogic.vcxproj.filters  MinionMadness.h
source/Graphics/: Graphics.vcxproj  Graphics.vcxproj.filters  GraphicsWindow.cpp  GraphicsWindow.h  Graphics_impl.cpp  Graphics_impl.h  MinionGraphicsDemo.cpp
source/MinionGraphics/: CMakeLists.txt  GraphicsWindow.cpp  GraphicsWindow.h  Graphics_impl.cpp  Graphics_impl.h  MinionGraphicsDemo.cpp  MinionGraphicsException.cpp  MinionGraphics_DevInterface.cpp  MinionGraphics_DevInterface.h  TODO.txt  Window_impl.cpp  Window_impl.h  autolink_windows.h  common_graphic_utilities.h
source/MinionGraphics/include/: MinionCamera.h  MinionExeptions.h  MinionGraphics.h  MinionLight.h  MinionMath.h  MinionModel.h  MinionPreprocess.h  MinionWindow.h
source/MinionGraphics/models/: Mesh.cpp  Mesh.h  MeshLoader.cpp  Model.cpp  Model.h  Plane.cpp  Plane.h  Triangle.cpp  Triangle.h
source/MinionGraphics/rendering/: Camera.cpp  Camera.h  RenderTexture.cpp  RenderTexture.h  SaveFrameBuffer.h  SaveViewport.h  ShaderProgram.cpp  ShaderProgram.h  Texture.h
source/MinionGraphics/rendering/renderers/: BasicRenderer.h  DeferredRenderer.cpp  DeferredRenderer.h  GUIRenderer.cpp  GUIRenderer.h  Renderer.h  ShadowMapRenderer.cpp  ShadowMapRenderer.h
source/MinionGraphics/shaders/: deferredGeometryPass.fs  deferredGeometryPass.vs  deferredRenderLightPass.vs  deferredRendererPointLightPass.fs
source/MinionLogic/: LogicConstants.h  MinionLogic.vcxproj  MinionLogic.vcxproj.filters
source/MinionMadness/: MinionMadness.vcxproj  main.cpp
source/MinionPhysics/: MinionPhysics.vcxproj  MinionPhysics.vcxproj.filters  MinionPhysics_Impl.cpp  MinionPhysics_Impl.h  RigidBody.h
tools/: MinionGraphics.logg  cpy_files.bat  cpy_files.py  graphics_debug.bat  graphics_debug.py  graphics_debug.sh
(+85 files in other folders)
